# Bilgisayar_Aglari

./: .lock-ns3_linux_build  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  ns3config.txt
cmake-cache/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json  ns3.41-stdlib_pch_exec-default  ns3config.txt  ns3scratches
cmake-cache/examples/: CTestTestfile.cmake  cmake_install.cmake
cmake-cache/pkgconfig/: ns3-antenna.pc  ns3-aodv.pc  ns3-applications.pc  ns3-bridge.pc  ns3-csma-layout.pc  ns3-csma.pc  ns3-internet-apps.pc  ns3-internet.pc  ns3-lr-wpan.pc  ns3-mesh.pc  ns3-netanim.pc  ns3-point-to-point-layout.pc  ns3-sixlowpan.pc  ns3-spectrum.pc  ns3-topology-read.pc  ns3-traffic-control.pc  ns3-virtual-net-device.pc  ns3-wifi.pc
cmake-cache/scratch/: CTestTestfile.cmake  cmake_install.cmake
cmake-cache/src/: CTestTestfile.cmake  cmake_install.cmake
cmake-cache/utils/: CTestTestfile.cmake
examples/: Makefile  cmake_install.cmake
my_project/: CMakeCache.txt  CMakeLists.txt
pkgconfig/: ns3-config-store.pc  ns3-dsdv.pc  ns3-dsr.pc  ns3-fd-net-device.pc  ns3-flow-monitor.pc  ns3-lte.pc  ns3-nix-vector-routing.pc  ns3-olsr.pc  ns3-tap-bridge.pc  ns3-uan.pc  ns3-wimax.pc
scratch/: Makefile  cmake_install.cmake
scratch/ezgi/: CMakeLists.txt  main.cc
scratch/nested-subdir/: Makefile
src/: Makefile  cmake_install.cmake
src/antenna/: Makefile
testpy-output/: 2024-05-06-11-56-35-CUT-results.xml
utils/: Makefile  cmake_install.cmake
(+264 files in other folders)
